--- a/yml/_config.shoka.yml
+++ b/yml/_config.shoka.yml
@@ -1,21 +1,47 @@
+# Alternate site name
 alternate: zhanglin
-statics: / #//cdn.jsdelivr.net/gh/amehime/shoka@latest/
+
+open_graph:
+  #twitter_id:
+  #google_plus:
+  #fb_admins:
+  #fb_app_id:
+
+# Assets
+statics: / #//cdn.jsdelivr.net/gh/username/RepositoryName@latest/
 css: css
 js: js
 images: images
-darkmode: # true
-auto_scroll: # false
-# 是否显示页面加载动画 loading-cat
+
+# themes/shoka/source/images/***
+favicon:
+  apple_touch_icon: /apple-touch-icon.png
+  #safari_pinned_tab: /logo.svg
+  #android_manifest: /manifest.json
+  #ms_browserconfig: /browserconfig.xml
+
+# Dark Mode
+# By default, the page judges whether to turn on the dark mode according to the device settings or user selection
+# if `true`, the page will be displayed directly as Dark Mode, unless the user makes another choice
+darkmode: false
+
+# By default the page will automatically scroll to the last viewed position
+# if `false`, automatic positioning will be turned off
+auto_scroll: true
+
+# Whether to show the loading cat
 loader:
-  start: false # 当初次打开页面时，显示加载动画
-  switch: false # tab 切换到其他页面时，显示加载动画
+  start: true # When entering the page
+  switch: false # When switching to another page
+
+# click with Firework
 fireworks:
-  enable: false # 是否启用
-  color: # 烟花颜色
-    - "rgba(255,182,185,.9)"
-    - "rgba(250,227,217,.9)"
-    - "rgba(187,222,214,.9)"
-    - "rgba(138,198,209,.9)"
+  enable: true
+  color:
+    # - "rgba(255,182,185,.9)"
+    # - "rgba(250,227,217,.9)"
+    # - "rgba(187,222,214,.9)"
+    # - "rgba(138,198,209,.9)"
 
 font:
   enable: true
@@ -60,26 +86,32 @@ font:
 
 # project of https://www.iconfont.cn/
 # //at.alicdn.com/t/font_1832207_c8i9n1ulxlt.css => 1832207_c8i9n1ulxlt
-# iconfont: "1832207_c8i9n1ulxlt"
+iconfont: "1832207_igi8uaupcus"
+
 menu:
   home: / || home
-  about: /about/ || user
+  # about: /about/ || user
   posts:
     default: / || feather
     archives: /archives/ || list-alt
     categories: /categories/ || th
     tags: /tags/ || tags
-  # friends: /friends/ || heart
+  friends: /friends/ || heart
   # links: /links/ || magic
 
+# Social Links
+# Usage: `Key: permalink || icon || color`
+# Key is the link label showing to end users.
+# Value before `||` delimiter is the target permalink,
+# secend value is the name of Font icon.
 social:
-  github: https://github.com/yourname || github || "#191717"
+  github: https://github.com/zhanglin233 || github || "#191717"
   #google: https://plus.google.com/yourname || google
-  twitter: https://twitter.com/yourname || twitter || "#00aff0"
-  zhihu: https://www.zhihu.com/people/yourname || zhihu || "#1e88e5"
-  music: https://music.163.com/#/user/home?id=yourid || cloud-music || "#e60026"
-  weibo: https://weibo.com/yourname || weibo || "#ea716e"
-  about: https://about.me/yourname || address-card || "#3b5998"
+  #twitter: https://twitter.com/yourname || twitter || "#00aff0"
+  #zhihu: https://www.zhihu.com/people/yourname || zhihu || "#1e88e5"
+  music: https://music.163.com/#/user/home?id=330903372 || cloud-music || "#e60026"
+  #weibo: https://weibo.com/yourname || weibo || "#ea716e"
+  #about: https://about.me/yourname || address-card || "#3b5998"
   #email: mailto:yourname@mail.com || envelope || "#55acd5"
   #facebook: https://www.facebook.com/yourname || facebook
   #stackoverflow: https://stackoverflow.com/yourname || stack-overflow
@@ -91,34 +123,76 @@ social:
 sidebar:
   # Sidebar Position.
   position: right
-  #position: right
+  # position: right
   # Replace the default avatar image and set the url here.
   avatar: avatar.jpg
 
 widgets:
-  random_posts: true # 显示随机文章
-  recent_comments: true # 显示最近评论
+  # if true, will show random posts
+  random_posts: true
+  # if true, will show recent comments
+  recent_comments: true
 
-# 页尾全站统计
 footer:
+  # Specify the date when the site was setup. If not defined, current year will be used.
   since: 2010
+  icon:
+    name: sakura rotate
+    # Change the color of icon, using Hex Code.
+    color: "#ffc0cb"
+  # Dependencies: https://github.com/theme-next/hexo-symbols-count-time
   count: true
+  powered: true
 
-# 文章界面统计
 post:
+  # Dependencies: https://github.com/theme-next/hexo-symbols-count-time
   count: true
 
+# Reward (Donate)
+reward:
+  # If true, reward will be displayed in every article by default.
+  enable: true
+  account:
+    wechatpay: /wechatpay.png
+    alipay: /alipay.png
+    paypal: /paypal.png
+
+# TagCloud settings for tags page.
+tagcloud:
+  # All values below are same as default, change them by yourself.
+  min: 16 # Minimun font size in px
+  max: 22 # Maxium font size in px
+  start: "#72cecf" # Start color (hex, rgba, hsla or color keywords)
+  end: "#ffbac3" # End color (hex, rgba, hsla or color keywords)
+  amount: 200 # Amount of tags, change it if you have more than 200 tags
+
+# ---------------------------------------------------------------
+# Third Party Plugins & Services Settings
+# ---------------------------------------------------------------
+
+# Creative Commons 4.0 International License.
+# See: https://creativecommons.org/share-your-work/licensing-types-examples
+# Available values of license: by | by-nc | by-nc-nd | by-nc-sa | by-nd | by-sa | zero
+# You can set a language value if you prefer a translated version of CC license, e.g. deed.zh
+# CC licenses are available in 39 languages, you can find the specific and correct abbreviation you need on https://creativecommons.org
+creative_commons:
+  license: by-nc-sa
+  language: deed.zh
+
+# Comments
+# Valine
+# For more information: https://github.com/amehime/MiniValine
 valine:
-  appId: #Your_appId
-  appKey: #Your_appkey
+  appId: aipj7VpOvs8mBX9XJfaggJXV-gzGzoHsz
+  appKey: VhEGQQaBuQGYnTgBBF3yVHIr
   placeholder: ヽ(○´∀`)ﾉ♪ # Comment box placeholder
   avatar: mp # Gravatar style : mp, identicon, monsterid, wavatar, robohash, retro
   pageSize: 10 # Pagination size
-  lang: zh-CN
-  visitor: true # 文章访问量统计
-  NoRecordIP: false # 不记录 IP
+  lang: en
+  visitor: true # Article reading statistic
+  NoRecordIP: false # Whether to record the commenter IP
   serverURLs: # When the custom domain name is enabled, fill it in here (it will be detected automatically by default, no need to fill in)
-  powerMode: true # 默认打开评论框输入特效
+  powerMode: true
   tagMeta:
     visitor: 新朋友
     master: 主人
@@ -138,12 +212,90 @@ valine:
     investor:
       # - hash of investor1@email.com
 
-valine:
-  placeholder: "1. 提问前请先仔细阅读本文档⚡\n2. 页面显示问题💥，请提供控制台截图📸或者您的测试网址\n3. 其他任何报错💣，请提供详细描述和截图📸，祝食用愉快💪"
----
-
+# bgm
 audio:
-  - https://music.163.com/song?id=1387098940
-  - https://music.163.com/#/playlist?id=2088001742
-  - https://www.xiami.com/collect/250830668
-  - https://y.qq.com/n/yqq/playsquare/3535982902.html
+  - title: 啦啦~
+    list:
+      - https://music.163.com/#/playlist?id=112875926
+      # - https://music.163.com/#/playlist?id=2015744447
+  - title: 啦啦啦~
+    list:
+      - https://music.163.com/#/playlist?id=2015744447
+
+# random image api
+# image_server: "https://acg.xydwz.cn/api/api.php"
+
+# Algolia Search
+# For more information: https://www.algolia.com
+search:
+  hits:
+    per_page: 10
+
+# Dependencies: https://github.com/amehime/hexo-renderer-multi-markdown-it
+# pangu: false
+
+# Quicklink Support
+# For more information: https://github.com/GoogleChromeLabs/quicklink
+quicklink:
+  # Custom a time in milliseconds by which the browser must execute prefetching.
+  timeout: 3000
+  # Default (true) will attempt to use the fetch() API if supported (rather than link[rel=prefetch]).
+  priority: true
+
+  # For more flexibility you can add some patterns (RegExp, Function, or Array) to ignores.
+  # See: https://github.com/GoogleChromeLabs/quicklink#custom-ignore-patterns
+  ignores:
+
+# ---------------------------------------------------------------
+# analytics & SEO Settings
+# ---------------------------------------------------------------
+baidu_analytics: # <app_id>
+
+# Disable Baidu transformation on mobile devices.
+disable_baidu_transformation: true
+
+# Automatically add external URL with Base64 encrypt & decrypt.
+exturl: true
+
+# Google Webmaster tools verification.
+# See: https://www.google.com/webmasters
+google_site_verification:
+
+# Bing Webmaster tools verification.
+# See: https://www.bing.com/webmaster
+bing_site_verification:
+
+# Yandex Webmaster tools verification.
+# See: https://webmaster.yandex.ru
+yandex_site_verification:
+
+# Baidu Webmaster tools verification.
+# See: https://ziyuan.baidu.com/site
+baidu_site_verification:
+
+# Enable baidu push so that the blog will push the url to baidu automatically which is very helpful for SEO.
+baidu_push: false
+
+#! ---------------------------------------------------------------
+#! DO NOT EDIT THE FOLLOWING `vendors` SETTINGS
+#! UNLESS YOU KNOW WHAT YOU ARE DOING
+#! Script dependencies will be combined with jsDelivr (cdn.jsdelivr.net)
+#! ---------------------------------------------------------------
+vendors:
+  css:
+    katex: npm/katex@0.12.0/dist/katex.min.css
+    comment: css/comment.css
+    fancybox: combine/npm/@fancyapps/fancybox@3.5.7/dist/jquery.fancybox.min.css,npm/justifiedGallery@3.8.1/dist/css/justifiedGallery.min.css
+  js:
+    pace: npm/pace-js@1.0.2/pace.min.js
+    pjax: npm/pjax@0.2.8/pjax.min.js
+    fetch: npm/whatwg-fetch@3.4.0/dist/fetch.umd.min.js
+    anime: npm/animejs@3.2.0/lib/anime.min.js
+    algolia: npm/algoliasearch@4/dist/algoliasearch-lite.umd.js
+    instantsearch: npm/instantsearch.js@4/dist/instantsearch.production.min.js
+    lazyload: npm/lozad@1/dist/lozad.min.js
+    quicklink: npm/quicklink@2/dist/quicklink.umd.js
+    fancybox: combine/npm/jquery@3.5.1/dist/jquery.min.js,npm/@fancyapps/fancybox@3.5.7/dist/jquery.fancybox.min.js,npm/justifiedGallery@3.8.1/dist/js/jquery.justifiedGallery.min.js
+    valine: gh/amehime/MiniValine@4.2.2-beta10/dist/MiniValine.min.js
+    copy_tex: npm/katex@0.12.0/dist/contrib/copy-tex.min.js
+    chart: npm/frappe-charts@1.5.0/dist/frappe-charts.min.iife.min.js
